# stellarium

./: CMakeLists.txt  stellarium.iss.cmake
data/: default_config.ini.cmake
debian/: changelog  control  copyright  rules
plugins/Exoplanets/src/: CMakeLists.txt
plugins/Oculars/resources/: Oculars.qrc
plugins/Oculars/src/: CMakeLists.txt  Lens.cpp  Ocular.cpp  Ocular.hpp  Oculars.cpp  Oculars.hpp  Telescope.cpp  Telescope.hpp
plugins/Oculars/src/gui/: OcularDialog.cpp  OcularDialog.hpp  OcularsGuiPanel.cpp  OcularsGuiPanel.hpp  PropertyBasedTableModel.hpp  ocularDialog.ui
plugins/Satellites/src/: CMakeLists.txt
po/stellarium/: POTFILES.in
po/stellarium-skycultures/: POTFILES.in
skycultures/: CMakeLists.txt
skycultures/botswana/: CMakeLists.txt  info.ini  reference.fab
src/: CMakeLists.txt  StelMainView.cpp  StelMainView.hpp  translations.h
src/core/: StelApp.cpp  StelCore.cpp  StelCore.hpp  StelViewportEffect.cpp
src/core/modules/: Planet.cpp  Planet.hpp  StarMgr.cpp  StarMgr.hpp  ZoneArray.cpp  ZoneArray.hpp
src/gui/: helpDialogGui.ui  shortcutsDialog.ui
util/skycultures/: po4a.config
